Fixed CSS issue in ts_object where term line was break on indexation arrow. Now no wrap is applied to the element wrapper to prevent it (width: max-content)

--- a/core/ts_object/css/ts_object.less
+++ b/core/ts_object/css/ts_object.less
@@ -7,8 +7,9 @@
 	.inline_common {
 		display: inline-table;
 		float: left;
-		font-size: 1em;
-		height: @ts_object_line_height;
+		font-size: 1rem;
+		// height: @ts_object_line_height;
+		// line-height: 1.5rem;
 	}
 
 
@@ -60,12 +61,15 @@
 			.inline_common;
 			//margin-left: 5px;
 			opacity: 0.5;
+			display: inline-flex;
+			flex-wrap: nowrap;
 		}
 
 		.id_column_link {
 			display: inline-table;
 			float: left;
-    		height: 1.4em;
+			height: 1.4em;
+			line-height: 1.5rem;
 
     		&:active {
     			opacity: 0.5;
@@ -128,11 +132,11 @@
 		.ts_object_order_number {
 			min-width: 14px;
 			text-align: right;
-			padding-top: 3px;
+			padding-top: 0px;
 			margin-right: 3px;
 			font-size: 9px;
 			font-family: monospace;
-			//background-color: aqua;
+			// background-color: aqua;
 		}
 		.input_order {
 			text-align: center;
@@ -206,6 +210,7 @@
 			min-width: 150px;
 			margin-left: 0px;
 			min-height: 22px;
+			display: flex;
 
 			// list_thesaurus commons
 			.list_thesaurus_element {
@@ -285,7 +290,10 @@
 				//min-width: 200px;
 				opacity: 1;
 				text-align: left;
-				white-space: nowrap;
+				// white-space: nowrap;
+				inline-size: auto;
+				overflow-wrap: break-word;
+				hyphens: auto;
 
 				&.loading {
 					// background-color: transparent;
@@ -327,12 +335,11 @@
 				font-size: 80%;
 				/* font-family: 'Menlo',monospace; */
 				/* word-wrap: break-word; */
-				vertical-align: sub;
-				position: relative;
-				top: -1px;
+				vertical-align: super;
 				padding-left: 5px;
 				padding-right: 0.25rem;
 				user-select: auto;
+				line-height: 1.4rem;
 			}
 
 			// indexations
